--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# webpack build files
+webpack-static/
+
 # django
 db.sqlite3
 local_settings.py
@@ -9,6 +12,9 @@ media/
 # python
 *.pyc
 __pycache__/
+
+# Node
+node_modules/
 
 # Environments
 .env/
